--- a/style.css
+++ b/style.css
@@ -35,16 +35,21 @@ area {
     outline: 1px solid red;
 }
 
+#imagem-container{
+    position: relative;
+}
+
 #mapa {
     border-radius: 20px;
 
 }
 
 #indice-mapa{
-    width: 150px;
-    position: fixed;
-    left: 50px;
-    bottom: 0px;
+    position: absolute;
+    z-index: 1;
+    width: 200px;
+    left: 0px;
+    bottom: 5px;
 
 }
 
