--- a/style.css
+++ b/style.css
@@ -56,7 +56,10 @@ area:focus{
 
 /* INFORMAÇÃO */
 #info {
-    width: 700px;
+    width: 500px;
+    height: 901px;
+    overflow: hidden;
+
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
     padding: 30px;
@@ -79,5 +82,8 @@ area:focus{
     display: block;
     margin: auto;
     opacity: 0.5;
+
+    max-width: 100%;
+    max-height: 100%;
 
 }
