--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     font-size: 1.1em;
 }
 
+@font-face {
+    font-family: JMH Typewriter;
+    src: url('JMH\ Typewriter.ttf');
+}
+
 body {
     background-color: black;
 }
@@ -26,9 +31,9 @@ header>h1 {
 main {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin: 50px 50px 0 50px;
-    gap: 50px;
+    justify-content: center;
+    margin: 50px 0px 0px 0px;
+    gap: 80px;
 }
 
 /* CONTAINER Q ENGLOBA O MAPA, INDICE E INFO*/
@@ -58,12 +63,12 @@ area:focus{
 #info {
     width: 700px;
     height: 901px;
-    overflow: hidden;
+    position: relative;
 
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
     padding: 30px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'JMH Typewriter';
 }
 
 #info > h2{
@@ -73,16 +78,15 @@ area:focus{
 }
 
 #info > p{
+    font-size: 1em;
     text-align: justify;
     margin-bottom: 20px;
     text-indent: 50px;
 }
 
 #imagem-anya{
-    display: block;
-    margin: auto;
-    opacity: 0.5;
-
-    max-width: 100%;
-    max-height: 100%;
+    position: absolute;
+    bottom: 10%;
+    left: 20%;
+    opacity: 0.11;
 }
