--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: #fff2c8;
 }
 
 
@@ -50,7 +50,6 @@ area:focus{
 /* INDICE DO MAPA ------------------------------------------------*/
 #indice-mapa{
     position: fixed;
-    z-index: 1;
     width: 10vw;
     left: 5px;
     bottom: 5px;
@@ -58,6 +57,10 @@ area:focus{
 
 /* INFORMAÇÃO */
 #info {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+
     opacity: 90%;
     border: 2px solid black;
 
@@ -68,10 +71,7 @@ area:focus{
     padding: 30px;
 
     font-family: 'JMH Typewriter';
-    font-size: 0.8vw;
-
     overflow: scroll;
-    z-index: 1;
 }
 
 #info > h2{
