--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ area:focus{
 /* INFORMAÇÃO */
 #info {
     position: fixed;
-    right: 0;
-    bottom: 0;
+    right: 5px;
+    bottom: 5px;
 
     opacity: 90%;
     border: 2px solid black;
