--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 @font-face {
@@ -51,20 +51,21 @@ area:focus{
 #indice-mapa{
     position: fixed;
     width: 10vw;
-    left: 5px;
+    right: 5px;
     bottom: 5px;
 }
 
 /* INFORMAÇÃO */
 #info {
     position: fixed;
-    right: 5px;
+    left: 5px;
     bottom: 5px;
 
     opacity: 90%;
     border: 2px solid black;
 
-    width: 20%;
+    width: 20vw;
+    height: 50%;
 
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
@@ -76,12 +77,10 @@ area:focus{
 
 #info > h2{
     text-align: center;
-    font-size: 1.5em;
     padding-bottom: 30px;
 }
 
 #info > p{
-    font-size: 1em;
     text-align: justify;
     margin-bottom: 20px;
     text-indent: 5%;
